src/main/resources/api/examples/errors/error-example-400.raml
#%RAML 1.0 NamedExample
values:
  message: Bad Request  
  errors:  
    - #item 1
      "code": xxx-000
      "message": The request cannot be fulfilled due to bad syntax.